# tactics

./: .gitmodules  CMakeLists.txt  LICENSE
cmake/: PythonNumpyPybind11.cmake
examples/: minst.py
include/: HalideRuntime.h
include/tactics/core/: auto_storage.h  backend.h  buffer_allocator.h  memory_utils.h  tensor.h  tensor_utils.h
include/tactics/math/: common.h  matrix.h  vec.h
mojo/: __init__.mojo
python/tactics/: __init__.py  helpers.py  tensor.py
python/tactics/_c/: __init__.py  tactics_bind.pyi
python/tactics/nn/: __init__.py  batch_normalize.py  convolution.py  embedding.py  linear.py  model.py
python/tactics/shape/: node.py
tactics/: CMakeLists.txt
tactics/core/: CMakeLists.txt  backend.cpp  buffer_alloc.cpp  memory_utils.cpp  tensor.cpp  tensor_utils.cpp
tactics/math/: common.cpp  math.cpp
tactics/ops/gpu/cuda/: matmul.cu
tactics/python/: CMakeLists.txt  binding.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  tensor_test.cpp
test/math/: CMakeLists.txt  matrix_test.cpp
